adicionado escolha de candidato

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                             <span>SEU VOTO PARA</span>
                         </div>
 
-                        <div class="candidate">
+                        <div class="title-candidate">
                             <span>VEREADOR</span>
                         </div>
 
                         <div class="inputs">
-                            <div class="square blink">1</div>
-                            <div class="square">1</div>
+                            <div class="square"></div>
+                            <div class="square"></div>
                         </div>
 
                         <div class="info-candidate">
@@ -58,36 +58,37 @@
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
+                    <div class="button" onclick="handleNumberClick('1');">1</div>
+                    <div class="button" onclick="handleNumberClick('2');">2</div>
+                    <div class="button" onclick="handleNumberClick('3');">3</div>
                 </div>
 
                 <div class="keyboard-row">
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
+                    <div class="button" onclick="handleNumberClick('4');">4</div>
+                    <div class="button" onclick="handleNumberClick('5');">5</div>
+                    <div class="button" onclick="handleNumberClick('6');">6</div>
                 </div>
 
                 <div class="keyboard-row">
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
+                    <div class="button" onclick="handleNumberClick('7');">7</div>
+                    <div class="button" onclick="handleNumberClick('8');">8</div>
+                    <div class="button" onclick="handleNumberClick('9');">9</div>
                 </div>
 
                 <div class="keyboard-row">
-                    <div class="button">0</div>
+                    <div class="button" onclick="handleNumberClick('0');">0</div>
                 </div>
 
                 <div class="keyboard-row">
-                    <div class="button btn-white">BRANCO</div>
-                    <div class="button btn-yellow">CORRIGE</div>
-                    <div class="button btn-green">CONFIRMA</div>
+                    <div class="button btn-white" onclick="handleWhiteButtonClick();">BRANCO</div>
+                    <div class="button btn-yellow" onclick="handleYellowButtonClick();">CORRIGE</div>
+                    <div class="button btn-green" onclick="handleGreenButtonClick();">CONFIRMA</div>
                 </div>
             </div>
         </div>
     </div>
 
+    <script src="assets/js/steps.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
